--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -11,8 +11,10 @@
     text-align: center;
     & span {
       color: #fff;
+      font-family: 'Sorts Mill Goudy', serif;
     }
     & h3 {
+      font-family: 'Sorts Mill Goudy', serif;
       font-size: 1.6rem;
       text-transform: capitalize;
       line-height: 3rem;
