--- a/scss/components/_tarjeta.scss
+++ b/scss/components/_tarjeta.scss
@@ -7,6 +7,7 @@
             -15px -15px 30px #ffffff;
   transition: 0.2s ease-in-out;
   order: 2;
+  text-decoration: none;
   img {
     object-fit: cover;
   }
