--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,8 @@ h4 {
   width: 100%;
   height: auto;
   padding-top: 2.5rem;
+  color: #fff;
+  text-shadow: 0 0 2px black;
 }
 .footer__content {
   display: flex;
@@ -194,7 +196,7 @@ h4 {
   text-align: center;
 }
 .footer__content span {
-  color: #fff;
+  color: #000000;
   font-family: "Sorts Mill Goudy", serif;
 }
 .footer__content h3 {
@@ -202,6 +204,7 @@ h4 {
   font-size: 1.6rem;
   text-transform: capitalize;
   line-height: 3rem;
+  color: #fff;
 }
 .footer__content p {
   max-width: 500px;
@@ -221,14 +224,14 @@ h4 {
 }
 .footer__socials a {
   text-decoration: none;
-  color: #000;
+  color: #ffffff;
 }
 .footer__socials a i {
   font-size: 1.5rem;
   transition: color 0.4s ease;
 }
 .footer__socials a:hover i {
-  color: #fff;
+  color: #000000;
 }
 .footer__bottom {
   width: 100%;
@@ -240,7 +243,8 @@ h4 {
   word-spacing: 0.125rem;
 }
 .footer__bottom span {
-  opacity: 0.6;
+  opacity: 0.7;
+  color: #ffffff;
 }
 
 .hero {
@@ -274,7 +278,7 @@ h4 {
 
 .portada {
   position: relative;
-  height: 110vh;
+  min-height: 110vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -288,6 +292,10 @@ h4 {
   position: absolute;
   left: 5%;
   top: 17%;
+}
+.portada__cont-type h2 {
+  font-size: 5.8vw;
+  font-weight: 400;
 }
 .portada__cont-type span {
   font-size: 5.8vw;
@@ -340,11 +348,10 @@ h4 {
   font-weight: bold;
 }
 .portada__te-invito {
-  background-color: hsl(183, 100%, 36%);
+  background-color: #fff;
   padding: 1.5rem;
-  border-radius: 50px;
-  color: #fff;
   font-size: 3rem;
+  font-weight: bold;
   margin-top: 55px;
   opacity: 0;
   animation-name: appear;
@@ -353,6 +360,16 @@ h4 {
   animation-fill-mode: forwards;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.5);
   transform: translateX(-250px) translateY(-50px);
+  text-decoration: none;
+  border-radius: 40px;
+}
+.portada__te-invito .inside-text {
+  background-image: linear-gradient(45deg, hsl(194, 100%, 13%), hsl(194, 100%, 17%), hsl(194, 100%, 22%), hsl(194, 100%, 27%), hsl(194, 100%, 32%), hsl(194, 100%, 37%), hsl(194, 100%, 42%), hsl(194, 100%, 47%), hsl(194, 100%, 52%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-size: 400%;
+  animation: color 2s infinite alternate;
 }
 .portada__arrow-container {
   margin-top: 50px;
@@ -451,6 +468,7 @@ h4 {
   border-left: 2px solid;
   border-image: linear-gradient(to bottom, transparent 3%, rgba(0, 0, 0, 0.479) 3%, transparent);
   border-image-slice: 1;
+  line-height: 1.5;
 }
 .about__person {
   max-width: 15rem;
@@ -537,7 +555,7 @@ h4 {
   font-family: "Indie Flower", cursive;
   font-style: normal;
 }
-.about__cont-btn-texto button {
+.about__cont-btn-texto a {
   min-width: 238px;
 }
 .about__socials {
@@ -640,7 +658,7 @@ h4 {
   position: absolute;
   width: 175px;
   z-index: 10;
-  top: 150px;
+  top: 130px;
   left: 175px;
 }
 .videos__cont-vid {
@@ -667,17 +685,31 @@ h4 {
   overflow: hidden;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.5);
 }
+.videos__cont-vid figure {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .videos__cont-vid figcaption {
   width: 500px;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  text-align: justify;
+}
+.videos__cont-vid figcaption h3 {
+  text-align: center;
+}
+.videos__cont-vid figcaption p {
+  line-height: 1.5;
 }
 .videos__cont-vid .contraste {
   background-color: hsl(29, 97%, 86%);
 }
-.videos__cont-vid button {
+.videos__cont-vid a {
   margin-bottom: 30px;
 }
 
@@ -737,7 +769,7 @@ h4 {
   padding-top: 7rem;
   width: 100%;
   margin-bottom: 100px;
-  height: 255vh;
+  min-height: 310vh;
 }
 .fotos .videos__cont-titulo {
   margin-bottom: 30px;
@@ -860,7 +892,7 @@ h4 {
   transform-origin: right;
 }
 .fotos__cont-h3-expandible {
-  margin-bottom: 70px;
+  margin-bottom: 90px;
   transform: translateX(250px);
   width: fit-content;
   padding-right: 0.5rem;
@@ -877,6 +909,8 @@ h4 {
   display: flex;
   width: 100%;
   height: 70vh;
+  gap: 30px;
+  padding: 0 50px;
 }
 .fotos__item {
   flex: 1;
@@ -889,16 +923,38 @@ h4 {
   flex-direction: column;
   justify-content: end;
   padding: 0 0 10px 10px;
+  border-top-right-radius: 50px;
+  box-shadow: #e6e6e6 5px 5px 2px 0px, #c7c7c7 6px 6px 2px 0px, #ababab 7px 7px 2px 0px, #9e9e9e 8px 8px 2px 0px, #919191 9px 9px 2px 0px;
 }
 .fotos__item p {
-  max-width: 250px;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6705882353);
+  color: #3b3b3b;
+  font-size: 1.3rem;
+  max-width: 300px;
   opacity: 0;
   transition: opacity 2s ease;
+  margin: 0 0 20px 20px;
+  background-color: rgba(255, 255, 255, 0.7254901961);
+  padding: 5px;
+  box-shadow: 0 0 5px 15px rgba(255, 255, 255, 0.7254901961);
+  line-height: 1.35;
+  border-radius: 5px;
 }
-.fotos__item h3 {
-  transform: translateY(125px);
-  transition: 0.5s ease;
-  margin-bottom: 3px;
+.fotos__item p .subr2 {
+  text-decoration: underline;
+}
+.fotos__item p .backgr {
+  background-color: rgba(87, 120, 151, 0.6352941176);
+  padding: 2px;
+  color: white;
+  padding: 4px;
+  border-radius: 10px;
+}
+.fotos__item p .colo {
+  color: #383d6e;
+  font-size: 1.1rem;
+  letter-spacing: 0.5px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .fotos__item:hover {
   flex: 3.4;
@@ -906,12 +962,9 @@ h4 {
 .fotos__item:hover p {
   opacity: 1;
 }
-.fotos__item:hover h3 {
-  transform: translateY(0);
-}
 .fotos__item:not(:hover) p {
   opacity: 0;
-  transition: opacity 0.2s ease;
+  transition: opacity 0.5s ease;
 }
 .fotos__item-1 {
   background-image: url("../img/adri-galard.jpg");
@@ -959,11 +1012,6 @@ h4 {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  --mask:
-  conic-gradient(from 132.5deg at top,#0000,#000 1deg 94deg,#0000 95deg) top/32.74px 51% repeat-x,
-  conic-gradient(from -47.5deg at bottom,#0000,#000 1deg 94deg,#0000 95deg) bottom/32.74px 51% repeat-x;
-  -webkit-mask: var(--mask);
-  mask: var(--mask);
 }
 .fotos__body-slider {
   display: flex;
@@ -1040,7 +1088,7 @@ h4 {
   background-image: url("../img/fondo-audio.jpg");
   background-position: center;
   background-size: cover;
-  margin: 750px 0 0;
+  margin: 200px 0 0;
   padding: 150px 0 200px;
   min-height: 150vh;
 }
@@ -1068,6 +1116,24 @@ h4 {
   width: 50%;
 }
 .audioteca__texto article h3 {
+  text-shadow: 1px 1px 3px #000;
+  font-weight: 500;
+}
+.audioteca__texto article .bold {
+  font-weight: 700;
+}
+.audioteca__texto article .contraste2 {
+  color: rgba(66, 50, 14, 0.8078431373);
+  background-color: rgba(197, 161, 83, 0.3137254902);
+  font-family: "Indie Flower", cursive;
+  letter-spacing: 2px;
+  padding: 3.3px;
+  font-weight: bold;
+}
+.audioteca__texto article .subr {
+  text-decoration: underline;
+}
+.audioteca__texto article h3 {
   font-size: 2.5rem;
   margin-bottom: 15px;
 }
@@ -1078,19 +1144,19 @@ h4 {
   padding-right: 25px;
   border-image: linear-gradient(to bottom, transparent 3%, rgba(0, 0, 0, 0.479) 3%, transparent);
   border-image-slice: 1;
+  line-height: 1.35;
 }
 .audioteca__texto article p::first-letter {
-  font-size: 3rem;
-  font-weight: bold;
-  color: #4080e0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 2rem;
+  font-weight: 100;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .audioteca__sticker {
   z-index: 10;
   width: 200px;
   position: absolute;
-  top: 722px;
-  right: 180px;
+  top: 695px;
+  right: 130px;
 }
 .audioteca__cont-players {
   display: flex;
