--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,6 +3,8 @@
   width: 100%;
   height: auto;
   padding-top: 2.5rem;
+  color: #fff;
+  text-shadow: 0 0 2px black;
   &__content {
     display: flex;
     align-items: center;
@@ -10,7 +12,7 @@
     flex-direction: column;
     text-align: center;
     & span {
-      color: #fff;
+      color: #000000;
       font-family: 'Sorts Mill Goudy', serif;
     }
     & h3 {
@@ -18,6 +20,7 @@
       font-size: 1.6rem;
       text-transform: capitalize;
       line-height: 3rem;
+      color: #fff;
     }
     & p {
       max-width: 500px;
@@ -38,14 +41,14 @@
     }
     & a {
       text-decoration: none;
-      color: #000;
+      color: #ffffff;
     }
     & a i {
       font-size: 1.5rem;
       transition: color .4s ease;
     }
     & a:hover i {
-      color: #fff;
+      color: #000000;
     }
   }
 
@@ -58,7 +61,8 @@
       word-spacing: 0.125rem;
     }
     & span {
-      opacity: .6;
+      opacity: .7;
+      color: #ffffff;
     }
   }
 }
